--- a/css/master.scss
+++ b/css/master.scss
@@ -2,6 +2,8 @@
 @import "_global/layout";
 @import "_global/typography";
 
+@import "_atoms/buttons";
+
 @import "_molecules/navigation";
 
 @import "_organisms/headers";
