'input[type=button]' update
Added min-height rule to nullify normal input min-height.

--- a/css/_atoms/_forms.scss
+++ b/css/_atoms/_forms.scss
@@ -304,7 +304,10 @@ input.toggle[type="checkbox"]:checked:after {
 // BUTTONS
 fieldset.button-input > input[type="button"],
 fieldset.button-input > input[type="submit"],
-fieldset.button-input > input[type="reset"] {margin: 0;}
+fieldset.button-input > input[type="reset"] {
+  min-height: inherit;
+  margin: 0;
+}
 
 
 // SHOW-HIDE PASSWORD
