Started Images page; some css updates
'figure' and nested flexboxes still problematic in terms of consistent padding; updated README.md for version number and added Transitions page

--- a/css/_global/_layout.scss
+++ b/css/_global/_layout.scss
@@ -164,6 +164,6 @@ figure {
   }
 }
 
-@media (min-width: 48rem) {
-  .column > figure {padding: 0 0 1rem;}
-}
+.column > figure:first-child {padding: 0 0 1rem;}
+
+p + figure {padding: 2rem 0 1rem;}
