Moved 'h' tags into column divs
This is to set up for vertical alignment options (so that the 'h' tags aren't just hanging out at the top).

--- a/css/master.css
+++ b/css/master.css
@@ -295,6 +295,14 @@ figure {
 p + figure {
   padding: 2rem 0 1rem; }
 
+@media (min-width: 48rem) {
+  .column > figure:last-child {
+    padding: 1rem 0 0; }
+  .column > figure:first-child {
+    padding: 0 0 1rem; }
+  .column p + figure:last-child {
+    padding: 2rem 0 0; } }
+
 /* 
   NOTES:  
   All headline classes are set to a 1.2 minor third type scale
