--- a/css/_global/_layout.scss
+++ b/css/_global/_layout.scss
@@ -168,3 +168,9 @@ figure {
 .column > figure:last-child {padding: 1rem 0 0;}
 
 p + figure {padding: 2rem 0 1rem;}
+
+@media (min-width: 48rem) {
+  .column > figure:last-child {padding: 1rem 0 0;}
+  .column > figure:first-child {padding: 0 0 1rem;}
+  .column p + figure:last-child {padding: 2rem 0 0;}
+}
