--- a/css/master.scss
+++ b/css/master.scss
@@ -7,6 +7,7 @@
 
 @import "_molecules/navigation";
 @import "_molecules/cards";
+@import "_molecules/blockquotes";
 
 @import "_organisms/headers";
 @import "_organisms/footers";
